--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
@@ -24,7 +25,7 @@
     "lucide-react": "^0.474.0",
     "next": "16.0.8",
     "next-auth": "^5.0.0-beta.25",
-    "nodemailer": "^7.0.11",
+    "nodemailer": "^7.0.7",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "19.2.1",
@@ -51,5 +52,8 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@auth/core": "0.41.1"
   }
 }
